Update authentication feature
- Add login and register servlet
- Add create profile servlet for candidate and employer
- Add ImageUploadUtil
- Add json-20230618.jar
- Add web.xml
- Add css and js for register and register_candidate, register_employer
- Update DBConnect
- Update Account, Candidate, Employer, AccountBO, CandidateBO, EmployerBO, AccountDAO, CandidateDAO, EmployerDAO
- Update HomeServlet
- Update login.jsp, register.jsp
- Add register_candidate.jsp, register_employer.jsp
- Add testUrl.jsp to test upload image

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>sem5_job_portal</name>
 	<comment></comment>
 	<projects>
+		<project>Servers</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
