Add new file ManageListServlet.java Add new file src/main/webapp/assets/css/admin/dashboard.css Add new file src/main/webapp/assets/css/admin/pagination.css Add new file src/main/webapp/assets/js/admin/dashboard.js

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/admin/dashboard.jsp=UTF-8
 encoding//src/main/webapp/includes/navbar.jsp=UTF-8
 encoding//src/main/webapp/index.jsp=UTF-8
 encoding/<project>=UTF-8
